			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * ENHANCED: error messages produced by load_foreign_library/1.

  * MAINTENANCE: Fixed incorrect assertion in O_SECURE mode.  Barry Evans.

  * ENHANCED: some Makefile cleanup.

  * PORT: Cleanup of autoconf configuration (dropped acconfig.h)

  * ENHANCED: Exploit GCC visibility("hidden") attribute.  Improves symbol
    handling for embedded applications on ELF-based systems.


VERSION 5.3.9 (Apr 15, 2004)
============================

  * MODIFIED: the library for embedded linking has been moved from
    runtime/$ARCH to lib/$ARCH.  Installation scripts using plld work
    without modification, but hand-crafted building of embedded executables
    must be adapted.

  * ADDED: configure option --enable-shared to create the Prolog kernel
    as a shared object.  Works on ELF based systems using the GNU toolchain.
    MODOFIED: configure option --disable-shared is renamed to
    --disable-load-foreign.

  * FIXED: Renamed corouting --> coroutining (Joachim Schimpf).

  * FIXED: debug/nondebug issues with multifile predicates (causing
    gtrace/0 to trace itself).  David Reitter.

  * MODIFIED: listing/1 throws exception if the target cannot be
    found (Enhancement#143).  Holger Kanwischer.

  * FIXED/MODIFIED: Syntax errors are now reported using a term
    file(Path, Line, LinePos, CharPos) or stream/4 if a stream is
    not associated to a file.  The LinePos element is added to this
    structure.  Syntax errors are reported using file:line:linepos.
    After suggestion from David Reitter.

  * FIXED: Made when/2 module-aware.

  * FIXED: Debug-settings for system predicates defined as discontiguous,
    etc.  Tom Schrijvers.
